# irc-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_parser.py
include/ircp/: irc_connection.h  ircp.h  url.h
include/twitch-irc/: twitch_irc.h  twitch_url.h
src/: irc_connection.cpp  ircp.cpp  main.cpp  twitch_irc.cpp
